<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_5sdp">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:src="@drawable/asia_mega_mart"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bdt_100"/>
        <TextView
            android:id="@+id/product_previous_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bdt_500"
            android:visibility="gone"/>
        <RatingBar
            android:id="@+id/product_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:visibility="gone"/>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>