<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/cart_toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_toolbar"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_8sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cart_product_image"
                android:layout_width="@dimen/_72sdp"
                android:layout_height="@dimen/_72sdp"
                android:layout_margin="@dimen/_15sdp"
                android:contentDescription="@string/todo"
                android:src="@drawable/asia_mega_mart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/cart_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/price" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cart_product_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_proce" />

                    <ImageView
                        android:id="@+id/cart_product_quantity_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_40sdp"
                        android:background="@drawable/circular_back"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_remove" />

                    <TextView
                        android:id="@+id/cart_product_quantity"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/cart_product_quantity_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/circular_back"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_add" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_2sdp">

                    <Button
                        android:id="@+id/cart_product_checkout"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/rounded_shape2"
                        android:text="@string/checkout"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/cart_product_delete"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_90sdp"
                        android:layout_marginLeft="@dimen/_90sdp"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_twotone_delete" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>