<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <include
            android:id="@+id/wishlist_toolbar"
            layout="@layout/toolbar"/>

        <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wishlist_toolbar"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/wishlist_product_image"
                    android:layout_width="@dimen/_72sdp"
                    android:layout_height="@dimen/_72sdp"
                    android:layout_margin="@dimen/_15sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/asia_mega_mart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wishlist_product_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/wishlist_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/price"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/wishlist_product_delete"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_twotone_delete" />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
